--- a/blog/main/templates/main/post_list.html
+++ b/blog/main/templates/main/post_list.html
@@ -8,12 +8,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static "css/index.css" %}">
 </head>
-<body>
+<header>
     <div class="container">
-        <h1><p>{{title}}</p></h1>
-        <p>Начало получилось очень интересным. Много не получалось, но так как до этого уже пробовал этим заниматься 
-            многие моменты решились сами собой
-        </p> 
+        <a href="">softquoke´</a> <br>
+        <h2><p>Django</p></h2>
+    </div>
+    <hr>
+</header>
+<body>
+    
+    <div class="container">
+
+        <ol reversed>
+            <a href=""><li>Новые ошибки</li></a>
+            <a href=""><li>Старые ошибки и как они повлияли на процесс</li></a>
+            <a href=""><li>Начало. Почему ведется этот блог</li></a>
+        </ol>
+        <!-- <dl>
+            <dt>Hummus</dt>
+            <dd>A thick dip/sauce generally made from chick peas blended with tahini, lemon juice, salt, garlic, and other ingredients.</dd>
+            <dt>Pita</dt>
+            <dd>A soft, slightly leavened flatbread.</dd>
+            <dt>Halloumi</dt>
+            <dd>A semi-hard, unripened, brined cheese with a higher-than-usual melting point, usually made from goat/sheep milk.</dd>
+            <dt>Green salad</dt>
+            <dd>That green healthy stuff that many of us just use to garnish kebabs.</dd>
+          </dl> -->
     </div>
 </body>
 </html>
