--- a/blog/main/static/css/index.css
+++ b/blog/main/static/css/index.css
@@ -1,32 +1,64 @@
 * {
-    margin-top: 0;
+    margin: 0;
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(29, 29, 29);
-    font-weight: 200;
 }
 
 body {
-    height: 1000px;
-    background-color: rgb(251, 251, 251);
+    /* background-color: rgb(251, 251, 251); */
 }
 
-h1 {
-    
-}
-
-h1 > p {
+h1, h2, h3 {
+    color:rgb(50, 50, 50);
     display: inline-block;
     block-size: auto;
     margin: 0;
-    background-color: rgba(213, 236, 255, 0.365);
+}
+
+p {
+    color: rgb(51, 51, 51);
+}
+
+a {
+    transition: 0.1s linear;
+    /* padding: 0 10px; */
+    text-align: none;
+    text-decoration: none;
+}
+
+a {
+    color:rgb(93, 93, 93);
+}
+
+a:hover {
+    color: rgb(44, 44, 44);
+}
+
+ul, ol {
+    margin: 1px 0;
+}
+
+li {
+    color: rgb(117, 117, 117);
+    line-height: 1.5;
+    transition: 0.1s linear;
+}
+
+li:hover {
+    color: rgb(44, 44, 44);
+}
+
+header > .container {
+    margin: 0 30px;
+    padding: 15px 0px;
+    width: 650px;
+    background-color: white;
 }
 
 .container {
     margin: 0 auto;
-    padding: 15px;
-    width: 600px;
-    height: 100%;
+    padding: 15px 30px;
+    width: 650px;
     background-color: white;
 }
-
