--- a/blog/main/templates/main/post_list.html
+++ b/blog/main/templates/main/post_list.html
@@ -10,20 +10,20 @@
 </head>
 <header>
     <div class="container">
-        <a href="">softquoke´</a> <br>
+        <a href="https://github.com/softquoke">softquoke´</a> <br>
         <h2><p>Django</p></h2>
     </div>
-    <hr>
+    <!-- <hr> -->
 </header>
 <body>
     
     <div class="container">
 
-        <ol reversed>
+        <ul reversed>
             <a href=""><li>Новые ошибки</li></a>
             <a href=""><li>Старые ошибки и как они повлияли на процесс</li></a>
             <a href=""><li>Начало. Почему ведется этот блог</li></a>
-        </ol>
+        </ul>
         <!-- <dl>
             <dt>Hummus</dt>
             <dd>A thick dip/sauce generally made from chick peas blended with tahini, lemon juice, salt, garlic, and other ingredients.</dd>
