--- a/blog/main/templates/main/base.html
+++ b/blog/main/templates/main/base.html
@@ -12,10 +12,10 @@
     <header>
         <div class="container">
             <a href="https://github.com/softquoke" target="_blank">softquoke´</a> <br>
-            <h2><p>Django</p></h2>
+            <h2>Django</h2>
         </div>
-        <hr>
     </header>
+    <hr>
     {% block content %}
     {% endblock content %}
 </body>
