--- a/blog/main/templates/main/post_detail.html
+++ b/blog/main/templates/main/post_detail.html
@@ -7,6 +7,7 @@
         <h3>{{ post.title }}</h3>
         <p>{{ post.text }}</p>
         {{post.created_date}}
+        <a href="{% url 'post_edit' pk=post.pk%}">Редактировать</a>
     </div>
 {% endblock content %}
 
