--- a/blog/main/static/css/index.css
+++ b/blog/main/static/css/index.css
@@ -3,3 +3,126 @@
     padding: 0;
     color: rgb(29, 29, 29);
 }
+
+a {
+    color:rgb(94, 94, 94);
+    text-decoration: none;
+    transition: 0.1s;
+}
+
+a:hover {
+    transition: 0.1s;
+    
+    color:rgb(34, 34, 34);
+}
+
+li, .post-title {
+    list-style: none;
+    margin-bottom: 25px;
+    line-height: 1.3;
+    /* border-top: 1px solid rgb(204, 204, 204); */
+    /* background-color: rgba(246, 246, 246, 0.5); */
+    padding: 10px;
+}
+
+header {
+    padding-top: 10px;
+    margin: 0 auto;
+    /* width: 500px; */
+    /* font-family: serif; */
+    background-color: rgba(165, 223, 225, 0.265);
+    border-top: 6px solid rgba(165, 223, 225, 0.665);
+}
+
+body {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgba(227, 227, 227, 0.045);
+}
+
+.container {
+    position: relative;
+    margin: 0 auto;
+    width: 70%;
+    max-width: 620px;
+}
+
+.content {
+    position: relative;
+}
+
+.header-container {
+    text-align: center;
+}
+
+.functions {
+    position: relative;
+    top: -3px;
+    display:inline-block;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+
+.header-logo {
+    display: inline-block;
+    margin: 0 auto;
+}
+.btn {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: 0.1s;
+    padding: 4px 13px;
+    border: none;
+    border-radius: 4px;
+    font-weight: 700;
+}
+
+.btn:hover {
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.btn-base {
+    color: white;
+
+    background: rgb(127, 204, 255);
+}
+
+.btn-base:hover {
+    background: rgb(104, 194, 255);
+
+}
+
+.post-link {
+    transition: 0.1s;
+    font-size: 1.6em;
+    font-weight: 500;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    
+}
+
+.post-link:hover {
+    transition: 0.1s;
+    /* background-color: rgba(225, 165, 186, 0.154); */
+    color:rgb(29, 29, 29);
+}
+
+.posts {
+    margin: 50px 0;
+    border-radius: 5px;
+}
+
+.numberOfPost {
+    position:relative;
+    top: -5px;
+    font-weight: 400;
+    font-size: small;
+    border: 1px solid gray;
+    border-radius: 1px;
+    padding: 2px 5px;
+}
+
+.publish_date {
+    font-size: 0.7em;
+    color:rgb(190, 190, 190);
+    font-weight: 500;
+}
