--- a/blog/main/templates/main/base.html
+++ b/blog/main/templates/main/base.html
@@ -15,13 +15,8 @@
     <header>
         <div class="header-container">
             <div class="header-logo">
-                <h2><a href="{% url 'post_list' %}" target="">softquoke´ in Django</a></h2>
+                <h2><a href="{% url 'post_list' %}" target="" class="logo">softquoke´ & Django</a></h2>
             </div>
-            {% if user.is_authenticated%}
-                <div class="functions">
-                    <a href="{% url 'post_new' %}"><button class="btn btn-base">Новый пост</button></a>
-                </div>
-            {% endif %}
         </div>
     </header>
     
