--- a/blog/main/static/css/index.css
+++ b/blog/main/static/css/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     color: rgb(29, 29, 29);
+    
 }
 
 a {
@@ -11,27 +12,23 @@ a {
 }
 
 a:hover {
-    transition: 0.1s;
-    
+    transition: 0.1s;    
     color:rgb(34, 34, 34);
 }
 
-li, .post-title {
+li, .post {
     list-style: none;
     margin-bottom: 25px;
     line-height: 1.3;
-    /* border-top: 1px solid rgb(204, 204, 204); */
-    /* background-color: rgba(246, 246, 246, 0.5); */
-    padding: 10px;
 }
 
 header {
     padding-top: 10px;
     margin: 0 auto;
-    /* width: 500px; */
-    /* font-family: serif; */
-    background-color: rgba(165, 223, 225, 0.265);
-    border-top: 6px solid rgba(165, 223, 225, 0.665);
+    /* background-color: rgba(165, 223, 225, 0.265); */
+    background-color: rgba(127, 204, 255, 0.765);
+    border-top: 6px solid rgba(127, 204, 255, 0.965);
+    margin-bottom: 20px;
 }
 
 body {
@@ -42,16 +39,18 @@ body {
 .container {
     position: relative;
     margin: 0 auto;
-    width: 70%;
+    width: 92%;
     max-width: 620px;
 }
 
 .content {
     position: relative;
+    padding: 10px 0px;
 }
 
 .header-container {
     text-align: center;
+    padding-bottom: 15px;
 }
 
 .functions {
@@ -59,13 +58,28 @@ body {
     top: -3px;
     display:inline-block;
     margin: 0 auto;
-    padding-bottom: 15px;
+    
 }
 
 .header-logo {
     display: inline-block;
     margin: 0 auto;
 }
+
+.logo {
+    transition: 0.5s;
+    color: white;
+    padding: 2px 15px;
+    border-radius: 5px;
+}
+
+.logo:hover {
+    transition: 1s;
+    color:rgb(3, 91, 180);
+    background-color: white;
+    
+}
+
 .btn {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: 0.1s;
@@ -102,12 +116,10 @@ body {
 
 .post-link:hover {
     transition: 0.1s;
-    /* background-color: rgba(225, 165, 186, 0.154); */
     color:rgb(29, 29, 29);
 }
 
 .posts {
-    margin: 50px 0;
     border-radius: 5px;
 }
 
