--- a/blog/main/templates/main/post_list.html
+++ b/blog/main/templates/main/post_list.html
@@ -8,10 +8,25 @@
 
 
 {% block content %}    
+<div class="functions">
+    {% if user.is_authenticated%}
+        <a href="{% url 'post_new' %}"><button class="btn btn-base">Написать пост</button></a>
+    {% endif %}
+</div>
 <div class="posts">
     <ul>
         {% for post in posts%}
-            <li class="post-title">
+            <li class="post">
+                {% comment %} <hr> {% endcomment %}
+                <span class="publish_date">{{post.created_date}}</span> <br>
+                <a href="{% url 'post_detail' pk=post.pk %}" class="post-link">
+                    <span class="numberOfPost" id="{{post.pk}}"></span>  {{ post.title }} 
+                </a>
+            </li>
+        {% endfor %}
+        {% for post in posts%}
+            <li class="post">
+                {% comment %} <hr> {% endcomment %}
                 <span class="publish_date">{{post.created_date}}</span> <br>
                 <a href="{% url 'post_detail' pk=post.pk %}" class="post-link">
                     <span class="numberOfPost" id="{{post.pk}}"></span>  {{ post.title }} 
@@ -20,6 +35,7 @@
         {% endfor %}
     </ul>
 </div>
+
 {% endblock content %}
 
 <!-- <dl>
