--- a/blog/main/static/css/index.css
+++ b/blog/main/static/css/index.css
@@ -25,7 +25,6 @@ li, .post {
 header {
     padding-top: 10px;
     margin: 0 auto;
-    /* background-color: rgba(165, 223, 225, 0.265); */
     background-color: rgba(127, 204, 255, 0.765);
     border-top: 6px solid rgba(127, 204, 255, 0.965);
     margin-bottom: 20px;
@@ -103,6 +102,16 @@ body {
 .btn-base:hover {
     background: rgb(104, 194, 255);
 
+}
+
+.btn-warning {
+	border: 1px solid red;
+	color: red;
+	background-color: rgba(255, 255, 255, 0);
+}
+
+.btn-warning:hover {
+	background-color: rgba(235, 235, 235, 0.6);
 }
 
 .post-link {
