--- a/blog/main/templates/main/post_detail.html
+++ b/blog/main/templates/main/post_detail.html
@@ -26,7 +26,10 @@
 </div>
 <div class="functions">
     {% if user.is_authenticated%}
-        <a href="{% url 'post_new' %}"><button class="btn btn-base">Редактировать</button></a>
+        <a href="{% url 'post_edit' pk=post.pk %}"><button class="btn btn-base">Редактировать</button></a>
+		
+		<a href="{% url 'post_delet' pk=post.pk %}"><button class="btn btn-warning">Удалить</button></a>
+		
     {% endif %}
 </div>
 
