--- a/blog/main/static/css/post.css
+++ b/blog/main/static/css/post.css
@@ -16,7 +16,6 @@
 .post {
     border-top: 1px solid rgb(216, 216, 216);
     padding-top: 10px;
-	background-color: black;
 }
 
 .post-title {
@@ -35,5 +34,18 @@
 input {
 	font-size: 1.7em;
 	padding: 10px 3px;
+}
+
+textarea {
+	border: none;
+	outline: none;
+	font-size: 1.2em;
+	color: rgb(86, 86, 86);
+	width: 100%;
+	height: 100%;
+}
+
+textarea, input {
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
