--- a/blog/main/templates/main/post_new.html
+++ b/blog/main/templates/main/post_new.html
@@ -1,6 +1,10 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block links %}
+<link rel="stylesheet" href="{% static 'css/post.css' %}">
+{% endblock links%}
+
 {% block content %}
 <h2>Новый пост</h2>
 <form method="post"> {% csrf_token %}
